--- a/public/css/user/detail.css
+++ b/public/css/user/detail.css
@@ -98,11 +98,13 @@ th{
     padding: 37px 0;
     padding-left: 75px;
     max-width: 400px;
+    min-width: 172px;
     margin: 0;
 }
 
 td{
     padding: 37px 40px;
+    width: 100%;
 }
 
 td p{
